--- a/source/stylesheets/syntax.css.scss.erb
+++ b/source/stylesheets/syntax.css.scss.erb
@@ -23,5 +23,9 @@ under the License.
 }
 
 .highlight, .highlight .w {
-  background-color: $code-bg;
+  background-color: $darknavy;
+}
+
+.highlight .s2, .highlight .s1 {
+  color: $green;
 }
