--- a/source/stylesheets/variables.scss
+++ b/source/stylesheets/variables.scss
@@ -20,6 +20,19 @@ under the License.
 ////////////////////////////////////////////////////////////////////////////////
 // Use these settings to help adjust the appearance of Slate
 
+$background: #e4e7e9;
+$darkgreen: #4ca55e;
+$darknavy: #222528;
+$footerlight: #747b81;
+$graphlinesback: #ececec;
+$gray: #DCDEE0;
+$green: #5DC372;
+$light: #6a7278;
+$navbardivider: #3e4449;
+$navy: #32373B;
+$offwhite: #F8F8F8;
+$red: #cc3a3a;
+$white: #FFFFFF;
 
 // BACKGROUND COLORS
 ////////////////////
