--- a/source/stylesheets/variables.scss
+++ b/source/stylesheets/variables.scss
@@ -22,14 +22,14 @@ under the License.
 
 $background: #e4e7e9;
 $darkgreen: #4ca55e;
-$darknavy: #222528;
+$darknavy: #20202b;
 $footerlight: #747b81;
 $graphlinesback: #ececec;
 $gray: #DCDEE0;
-$green: #5DC372;
+$green: #83bd31;
 $light: #6a7278;
 $navbardivider: #3e4449;
-$navy: #32373B;
+$navy: #2b2d37;
 $offwhite: #F8F8F8;
 $red: #cc3a3a;
 $white: #FFFFFF;
@@ -40,7 +40,7 @@ $nav-bg: #393939;
 $examples-bg: #393939;
 $code-bg: #292929;
 $code-annotation-bg: #1c1c1c;
-$nav-subitem-bg: #262626;
+$nav-subitem-bg: #2b2d37;
 $nav-active-bg: #2467af;
 $lang-select-border: #000;
 $lang-select-bg: #222;
@@ -99,10 +99,10 @@ $phone-width: $tablet-width - $nav-width; // min width before reverting to mobil
 
 // OTHER
 ////////////////////
-$nav-active-shadow: #000;
+$nav-active-shadow: #2b2d37;
 $nav-footer-border-color: #666;
-$nav-embossed-border-top: #000;
-$nav-embossed-border-bottom: #939393;
+$nav-embossed-border-top: #2b2d37;
+$nav-embossed-border-bottom: #2b2d37;
 $main-embossed-text-shadow: 0px 1px 0px #fff;
 $search-box-border-color: #666;
 
