Remove references to Conversio, replace logo with CM Commerce, fix docker builds

--- a/source/stylesheets/variables.scss
+++ b/source/stylesheets/variables.scss
@@ -22,14 +22,14 @@ under the License.
 
 $background: #e4e7e9;
 $darkgreen: #4ca55e;
-$darknavy: #20202b;
+$darknavy: #111324;
 $footerlight: #747b81;
 $graphlinesback: #ececec;
 $gray: #DCDEE0;
-$green: #83bd31;
+$green: #65b9ff;
 $light: #6a7278;
 $navbardivider: #3e4449;
-$navy: #2b2d37;
+$navy: #2a2941;
 $offwhite: #F8F8F8;
 $red: #cc3a3a;
 $white: #FFFFFF;
